fix: add word-wrapping for long task descriptions

--- a/src/components/Task.module.css
+++ b/src/components/Task.module.css
@@ -7,7 +7,8 @@
   padding: 1rem;
   border-radius: 0.5rem;
   width: 100%;
-  height: 4.5rem;
+  min-height: 4.5rem;
+  word-break: break-all;
 }
 
 .checked {
@@ -24,9 +25,11 @@
   gap: 0.75rem;
 }
 
-.task input {
-  width: 14.82px;
-  height: 14.82px;
+.task input[type="checkbox"] {
+  width: 1.090625rem;
+  height: 1.090625rem;
+  min-width: 1.090625rem;
+  min-height: 1.090625rem;
   background-color: transparent;
   border-radius: 50%;
   border: 2px solid var(--blue-500);
@@ -37,12 +40,15 @@
 }
 
 .task input:hover {
-  background-color: rgba(var(--blue-700), 0.2);
+  background: rgba(30, 111, 159, 0.2);
   border-color: var(--blue-700);
 }
 
 .task input:checked {
   background-color: var(--purple-700);
+  background-image: url("../assets/checkmark.svg");
+  background-repeat: no-repeat;
+  background-position: center;
   border-color: var(--purple-700);
   color: var(--gray-100);
 }
@@ -50,14 +56,6 @@
 .task input:checked:hover {
   background-color: var(--purple-500);
   border-color: var(--purple-500);
-}
-
-.task input:checked:before {
-  content: "\2713";
-  position: relative;
-  top: -4.61px;
-  left: 1.5px;
-  font-size: 10px;
 }
 
 .task p {
